# mwcast

./: .env.example  .gitignore  README.md  docker-compose.yml  mediamtx.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 20260315000001_create_streams_table.down.sql  20260315000001_create_streams_table.up.sql  20260406000001_rename_host_id_to_host_name.down.sql  20260406000001_rename_host_id_to_host_name.up.sql  20260424000001_create_users_table.up.sql  20260424000002_create_streams_table.up.sql
backend/src/: chat.rs  config.rs  db.rs  error.rs  extractors.rs  jwt.rs  kafka.rs  lib.rs  logger.rs  main.rs  response.rs  routes.rs
backend/src/handlers/: auth.rs  chat.rs  health.rs  mod.rs  streams.rs
backend/src/models/: mod.rs  stream.rs  user.rs
backend/src/repository/: mod.rs  stream.rs  user.rs
caddy/: Caddyfile
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  config.js  index.css
frontend/src/components/: AuthModal.jsx  GoLiveModal.jsx  JoinStreamModal.jsx  LivePlayer.jsx  LiveStreamCard.jsx  Navbar.jsx  Placeholder.jsx  Sidebar.jsx  WhepPlayer.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/hooks/: useWhepPlayer.js  useWhipPublisher.js
frontend/src/layouts/: MainLayout.jsx
frontend/src/pages/: AuthCallback.jsx  Explore.jsx  Home.jsx  NotFound.jsx  Stream.jsx
frontend/src/utils/: avatarStream.js
